Migrate examples from unpkg to jsdelivr to avoid errors.

--- a/example/clouds/index.html
+++ b/example/clouds/index.html
@@ -19,8 +19,8 @@
     import { TrackballControls } from 'three/examples/jsm/controls/TrackballControls.js?external=three';
 
     const Globe = new ThreeGlobe()
-      .globeImageUrl('//unpkg.com/three-globe/example/img/earth-blue-marble.jpg')
-      .bumpImageUrl('//unpkg.com/three-globe/example/img/earth-topology.png');
+      .globeImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-blue-marble.jpg')
+      .bumpImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-topology.png');
 
     const CLOUDS_IMG_URL = './clouds.png'; // from https://github.com/turban/webgl-earth
     const CLOUDS_ALT = 0.004;
