--- a/example/heatmap/index.html
+++ b/example/heatmap/index.html
@@ -27,7 +27,7 @@
     }));
 
     const Globe = new ThreeGlobe()
-      .globeImageUrl('//unpkg.com/three-globe/example/img/earth-dark.jpg')
+      .globeImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-dark.jpg')
       .heatmapsData([gData])
       .heatmapPointLat('lat')
       .heatmapPointLng('lng')
