--- a/example/links/index.html
+++ b/example/links/index.html
@@ -30,7 +30,7 @@
     }));
 
     const Globe = new ThreeGlobe()
-      .globeImageUrl('//unpkg.com/three-globe/example/img/earth-night.jpg')
+      .globeImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-night.jpg')
       .arcsData(arcsData)
       .arcColor('color')
       .arcDashLength(0.4)
