--- a/example/paths/index.html
+++ b/example/paths/index.html
@@ -39,8 +39,8 @@
     });
 
     const Globe = new ThreeGlobe({ animateIn: false })
-      .globeImageUrl('//unpkg.com/three-globe/example/img/earth-dark.jpg')
-      .bumpImageUrl('//unpkg.com/three-globe/example/img/earth-topology.png')
+      .globeImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-dark.jpg')
+      .bumpImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-topology.png')
       .pathsData(gData)
       .pathColor(() => ['rgba(0,0,255,0.8)', 'rgba(255,0,0,0.8)'])
       .pathDashLength(0.01)
