--- a/example/country-polygons/index.html
+++ b/example/country-polygons/index.html
@@ -21,7 +21,7 @@
     fetch('./ne_110m_admin_0_countries.geojson').then(res => res.json()).then(countries =>
     {
       const Globe = new ThreeGlobe()
-        .globeImageUrl('//unpkg.com/three-globe/example/img/earth-dark.jpg')
+        .globeImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-dark.jpg')
         .polygonsData(countries.features.filter(d => d.properties.ISO_A2 !== 'AQ'))
         .polygonCapColor(() => 'rgba(200, 0, 0, 0.7)')
         .polygonSideColor(() => 'rgba(0, 200, 0, 0.1)')
