--- a/example/custom-material/index.html
+++ b/example/custom-material/index.html
@@ -19,13 +19,14 @@
     import { TrackballControls } from 'three/examples/jsm/controls/TrackballControls.js?external=three';
 
     const Globe = new ThreeGlobe()
-      .globeImageUrl('//unpkg.com/three-globe/example/img/earth-blue-marble.jpg')
-      .bumpImageUrl('//unpkg.com/three-globe/example/img/earth-topology.png');
+      .globeImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-blue-marble.jpg')
+      .bumpImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-topology.png');
 
     // custom globe material
     const globeMaterial = Globe.globeMaterial();
     globeMaterial.bumpScale = 10;
-    new THREE.TextureLoader().load('//unpkg.com/three-globe/example/img/earth-water.png', texture => {
+    new THREE.TextureLoader().load('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-water.png', texture => {
+      console.log(texture);
       globeMaterial.specularMap = texture;
       globeMaterial.specular = new THREE.Color('grey');
       globeMaterial.shininess = 15;
