--- a/example/custom/index.html
+++ b/example/custom/index.html
@@ -29,8 +29,8 @@
     }));
 
     const Globe = new ThreeGlobe()
-      .globeImageUrl('//unpkg.com/three-globe/example/img/earth-blue-marble.jpg')
-      .bumpImageUrl('//unpkg.com/three-globe/example/img/earth-topology.png')
+      .globeImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-blue-marble.jpg')
+      .bumpImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-topology.png')
       .customLayerData(gData)
       .customThreeObject(d => new THREE.Mesh(
         new THREE.SphereGeometry(d.radius),
