--- a/example/hexed-polygons/index.html
+++ b/example/hexed-polygons/index.html
@@ -21,7 +21,7 @@
     fetch('./ne_110m_admin_0_countries.geojson').then(res => res.json()).then(countries =>
     {
       const Globe = new ThreeGlobe()
-        .globeImageUrl('//unpkg.com/three-globe/example/img/earth-dark.jpg')
+        .globeImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-dark.jpg')
         .hexPolygonsData(countries.features)
         .hexPolygonResolution(3)
         .hexPolygonMargin(0.3)
