--- a/example/satellites/index.html
+++ b/example/satellites/index.html
@@ -40,7 +40,7 @@
     const timeLogger = document.getElementById('time-log');
 
     const Globe = new ThreeGlobe()
-      .globeImageUrl('//unpkg.com/three-globe/example/img/earth-blue-marble.jpg')
+      .globeImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-blue-marble.jpg')
       .particleLat('lat')
       .particleLng('lng')
       .particleAltitude('alt')
