--- a/example/solar-terminator/index.html
+++ b/example/solar-terminator/index.html
@@ -45,7 +45,7 @@
     const timeEl = document.getElementById('time');
 
     const Globe = new ThreeGlobe()
-      .globeImageUrl('//unpkg.com/three-globe/example/img/earth-dark.jpg')
+      .globeImageUrl('//cdn.jsdelivr.net/npm/three-globe/example/img/earth-dark.jpg')
       .tilesData([solarTile])
       .tileLng(d => d.pos[0])
       .tileLat(d => d.pos[1])
