Fix satellites example

--- a/example/satellites/index.html
+++ b/example/satellites/index.html
@@ -56,7 +56,9 @@
       const satData = tleData.map(([name, ...tle]) => ({
         satrec: satellite.twoline2satrec(...tle),
         name: name.trim().replace(/^0 /, '')
-      }));
+      }))
+      // exclude those that can't be propagated
+      .filter(d => !!satellite.propagate(d.satrec, new Date())?.position);
 
       // time ticker
       let time = new Date();
