--- a/example/clouds/index.html
+++ b/example/clouds/index.html
@@ -41,7 +41,7 @@
     // Setup renderer
     const renderer = new THREE.WebGLRenderer();
     renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.setPixelRatio(window.devicePixelRatio);
+    renderer.setPixelRatio(Math.min(2, window.devicePixelRatio));
     document.getElementById('globeViz').appendChild(renderer.domElement);
 
     // Setup scene
